# seg-reg

./: BonesRemoval.cpp  BonesRemoval.h  CmdIterationUpdate.cpp  CmdIterationUpdate.h  DCMSeriesReader.h  DCMSeriesWriter.h  Erode.cpp  Erode.h  Graph.cpp  Graph.h  Pipeline.cpp  Pipeline.h  PreDef.h  README.md  ReaderBase.h  RegionGrow3D.h  Registration.cpp  Registration.h  RegistrationInterfaceCommand.h  SeedChoose.cpp  TableRemoval.cpp  TableRemoval.h  Utils.cpp  Utils.h  WriterBase.h  console.cpp
codes/: .gitignore  BonesRemoval.cpp  BonesRemoval.h  CMakeLists.txt  DCMSeriesReader.h  DCMSeriesWriter.h  Erode.cpp  Graph.cpp  IOhandleBase.h  Pipeline.cpp  Pipeline.h  Pipeline.i  Pipeline_wrap.cxx  PreDef.h  README.md  RawReader.h  RawWriter.h  ReaderBase.h  Registration.cpp  Registration.h  RegistrationInterfaceCommand.h  SeedChoose.cpp  TableRemoval.cpp  TableRemoval.h  Utils.cpp  Utils.h  WriterBase.h  console.cpp
flask/: app.py  test_flask.py
scripts/: covert2dcm.py  transform.cpp
