PROJECT(SegAndRegPipe)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_DEFINITIONS(-std=c++11)
SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_MODULE_PATH ${CMAKE_ROOT}/Modules${CMAKE_SOURCE_DIR}/cmake/modules)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_LIBRARY(SegAndRegPipe SHARED ${DIR_SRCS})
INCLUDE_DIRECTORIES(~/anaconda3/include/python3.6m/ /usr/local/include/ITK-4.13/)
TARGET_LINK_LIBRARIES(SegAndRegPipe
/usr/local/lib/libITKBiasCorrection-4.13.so
/usr/local/lib/libITKIOCSV-4.13.so			 
/usr/local/lib/libitkpng-4.13.so			 
/usr/local/lib/libITKIOGDCM-4.13.so			 
/usr/local/lib/libITKPolynomials-4.13.so
/usr/local/lib/libITKIOGE-4.13.so
/usr/local/lib/libITKQuadEdgeMesh-4.13.so
/usr/local/lib/libITKIOGIPL-4.13.so			 
/usr/local/lib/libITKSpatialObjects-4.13.so
/usr/local/lib/libITKIOHDF5-4.13.so			 
/usr/local/lib/libITKStatistics-4.13.so
/usr/local/lib/libITKIOImageBase-4.13.so		 
/usr/local/lib/libitksys-4.13.so
/usr/local/lib/libITKIOIPL-4.13.so			 
/usr/local/lib/libitktestlib-4.13.so
/usr/local/lib/libITKIOJPEG-4.13.so			 
/usr/local/lib/libitktiff-4.13.so
/usr/local/lib/libITKIOLSM-4.13.so			 
/usr/local/lib/libITKTransform-4.13.so
/usr/local/lib/libITKIOMesh-4.13.so			 
/usr/local/lib/libITKTransformFactory-4.13.so
/usr/local/lib/libITKIOMeta-4.13.so			 
/usr/local/lib/libitkv3p_netlib-4.13.so
/usr/local/lib/libITKIOMINC-4.13.so			 
/usr/local/lib/libitkvcl-4.13.so
/usr/local/lib/libITKIOMRC-4.13.so			 
/usr/local/lib/libITKVideoCore-4.13.so
/usr/local/lib/libITKIONIFTI-4.13.so			 
/usr/local/lib/libITKVideoIO-4.13.so
/usr/local/lib/libITKBiasCorrection-4.13.so	 
/usr/local/lib/libITKIONRRD-4.13.so			 
/usr/local/lib/libitkvnl-4.13.so
/usr/local/lib/libITKBioCell-4.13.so		 
/usr/local/lib/libITKIOPNG-4.13.so			 
/usr/local/lib/libitkvnl_algo-4.13.so
/usr/local/lib/libITKCommon-4.13.so		 
/usr/local/lib/libITKIOSiemens-4.13.so		 
/usr/local/lib/libITKVNLInstantiation-4.13.so
/usr/local/lib/libITKDICOMParser-4.13.so	 
/usr/local/lib/libITKIOSpatialObjects-4.13.so		
/usr/local/lib/libITKVTK-4.13.so
/usr/local/lib/libitkdouble-conversion-4.13.so  
/usr/local/lib/libITKIOStimulate-4.13.so		 
/usr/local/lib/libITKWatersheds-4.13.so
/usr/local/lib/libITKEXPAT-4.13.so		 
/usr/local/lib/libITKIOTIFF-4.13.so			 
/usr/local/lib/libitkzlib-4.13.so
/usr/local/lib/libITKFEM-4.13.so		 
/usr/local/lib/libITKIOTransformBase-4.13.so		 
/usr/local/lib/libITKznz-4.13.so
/usr/local/lib/libitkgdcmcharls-4.13.so	 
/usr/local/lib/libITKIOTransformHDF5-4.13.so
/usr/local/lib/libitkgdcmCommon-4.13.so	 
/usr/local/lib/libITKIOTransformInsightLegacy-4.13.so
/usr/local/lib/libitkgdcmDICT-4.13.so		 
/usr/local/lib/libITKIOTransformMatlab-4.13.so
/usr/local/lib/libitkgdcmDSED-4.13.so		 
/usr/local/lib/libITKIOVTK-4.13.so
/usr/local/lib/libitkgdcmIOD-4.13.so		 
/usr/local/lib/libITKIOXML-4.13.so
/usr/local/lib/libitkgdcmjpeg12-4.13.so	 
/usr/local/lib/libitkjpeg-4.13.so	
/usr/local/lib/libitkgdcmjpeg16-4.13.so	 
/usr/local/lib/libITKKLMRegionGrowing-4.13.so
/usr/local/lib/libitkgdcmjpeg8-4.13.so		 
/usr/local/lib/libITKLabelMap-4.13.so
/usr/local/lib/libitkgdcmMEXD-4.13.so		 
/usr/local/lib/libitklbfgs-4.13.so	
/usr/local/lib/libitkgdcmMSFF-4.13.so		 
/usr/local/lib/libITKMesh-4.13.so
/usr/local/lib/libitkgdcmopenjp2-4.13.so	 
/usr/local/lib/libITKMetaIO-4.13.so
/usr/local/lib/libitkgdcmsocketxx-4.13.so	 
/usr/local/lib/libitkminc2-4.13.so
/usr/local/lib/libitkgdcmuuid-4.13.so		 
/usr/local/lib/libitknetlib-4.13.so
/usr/local/lib/libITKgiftiio-4.13.so		 
/usr/local/lib/libitkNetlibSlatec-4.13.so		 
/usr/local/lib/libitkhdf5_cpp.so		 
/usr/local/lib/libITKniftiio-4.13.so			 
/usr/local/lib/libitkhdf5.so			 
/usr/local/lib/libITKNrrdIO-4.13.so			 
/usr/local/lib/libITKIOBioRad-4.13.so		 
/usr/local/lib/libITKOptimizers-4.13.so		 
/usr/local/lib/libITKIOBMP-4.13.so		 
/usr/local/lib/libITKOptimizersv4-4.13.so		 
/usr/local/lib/libITKIOBruker-4.13.so		 
/usr/local/lib/libITKPath-4.13.so
)


